--- a/pages/host/hostlogin.css
+++ b/pages/host/hostlogin.css
@@ -3,16 +3,34 @@
   margin-block-start: 1em;
   padding: 1em;
   width: 100%;
+  max-width: 40em;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: lightblue;
+}
+
+.toast {
+  background: whitesmoke;
+  width: max-content;
+  border-radius: 10px;
+  font-weight: bold;
+  letter-spacing: 1.1px;
+  padding: 0.5em 1em;
+
+  translate: -50%;
+  transform: translate(50vw);
+}
+
+.x-mark {
+  font-size: 0.8em;
+  padding-inline-end: 1em;
 }
 
 .loginCont form {
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 30em;
 }
 
 .loginCont input {
@@ -42,7 +60,20 @@
 
 .nameCont {
   width: 100%;
-  max-width: 30em;
+  max-width: 40em;
+}
+
+.signup {
+  margin-block-start: 1em;
+  color: gray;
+  font-weight: bold;
+}
+
+.signuplink {
+  color: black;
+  text-decoration: underline;
+  text-underline-offset: 2px;
+  text-decoration-thickness: 2px;
 }
 
 @media (width <=30em) {
