Fix: Accessibility Issues; Feat: Implemented deferred loading using Suspense, Await and defer

--- a/App.css
+++ b/App.css
@@ -3,6 +3,6 @@
   display: grid;
   place-items: center;
   padding-block: 0.8em;
-  color: rgba(94, 94, 94, 0.907);
+  color: whitesmoke;
   background: #121212;
 }
